--- a/index.html
+++ b/index.html
@@ -9,6 +9,52 @@
     <title>Codante - Card Imobiliária</title>
 </head>
 <body>
+    <div class="card">
+        <div class="card__image">
+            <img src="./assets/images/image-card.png" alt="Imagem de uma casa">
+        </div>
 
+        <div class="card__content">
+            <div class="card__title">
+                <h2 class="title">Apartamento moderno</h2>
+                <div class="avaliation">
+                    <p>4.8 (42 avaliações)</p>
+                </div>
+                <p class="description">Um belo apartamento moderno no centro da cidade</p>
+            </div>
+            <div class="card__details">
+                <div class="detail">
+                    <img src="./assets/images/vector-square.png" alt="">
+                    <p>85m<sup>2</sup></p>
+                </div>
+                <div class="detail">
+                    <img src="./assets/images/bed.png" alt="">
+                    <p>2 quartos</p>
+                </div>
+                <div class="detail">
+                    <img src="./assets/images/bath.png" alt="">
+                    <p>1banheiro</p>
+                </div>
+                <div class="detail">
+                    <img src="./assets/images/pin.png" alt="">
+                    <p>Centro</p>
+                </div>
+            </div>
+            <div class="card__tags">
+                <div class="tag">Wi-fi</div>
+                <div class="tag">Estacionamento</div>
+                <div class="tag">Animais de estimação</div>
+                <div class="tag">Piscina</div>
+                <div class="tag">Ar condicionado</div>
+            </div>
+            <div class="card__price">
+                <p class="price">R$ 2500,00</p>
+            </div>
+            <div class="card__button">
+                <button class="btn">Agendar visita</button>
+                <button class="btn btn--reverse">Contatar corretor</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
